--- a/infrastructure/kubernetes/roles/network_policies/tasks/reset.yaml
+++ b/infrastructure/kubernetes/roles/network_policies/tasks/reset.yaml
@@ -1,61 +1,15 @@
 - name: Deleting Network Policies
   block:
-    - name: Deleting All ArgoCD component Network Policies
-      block:
-        - name: deleting argocd server policy
-          ansible.builtin.shell:
-            cmd: calicoctl delete networkpolicy default.argocd-server-network-policy -n argocd
-
-        - name: deleting argocd repo server policy
-          ansible.builtin.shell:
-            cmd: calicoctl delete networkpolicy default.argocd-repo-server-network-policy -n argocd
-
-        - name: deleting argocd redis policy
-          ansible.builtin.shell:
-            cmd: calicoctl delete networkpolicy default.argocd-redis-network-policy -n argocd
-
-        - name: deleting argocd dex server policy
-          ansible.builtin.shell:
-            cmd: calicoctl delete networkpolicy default.argocd-dex-server-network-policy -n argocd
-
-        - name: deleting applicationset controller policy
-          ansible.builtin.shell:
-            cmd: calicoctl delete networkpolicy default.argocd-applicationset-controller-network-policy -n argocd
-
-        - name: deleting application controller policy
-          ansible.builtin.shell:
-            cmd: calicoctl delete networkpolicy default.argocd-application-controller-network-policy -n argocd
-    
-    - name: Deleting All Deployed ArgoCD Application Network Policies
-      block:
-        - name: Deleting Ingress Nginx Network Policy
-          ansible.builtin.shell:
-            cmd: calicoctl delete networkpolicy default.nginx -n nginx
-
-        - name: Deleting Prometheus Network Policy
-          ansible.builtin.shell:
-            cmd: calicoctl delete networkpolicy default.prometheus-operator-network-policy -n prometheus
-        
-        - name: Deleting Frontend Network Policy
-          ansible.builtin.shell:
-            cmd: calicoctl delete networkpolicy default.frontend-network-policy -n frontend
-        
-        - name: Deleting External DNS Network Policy
-          ansible.builtin.shell:
-            cmd: calicoctl delete networkpolicy default.external-dns-network-policy -n external-dns
-        
-        - name: Deleting cloudflare tunnel Network Policy
-          ansible.builtin.shell:
-            cmd: calicoctl delete networkpolicy default.cloudflare-tunnel -n cloudflare-tunnel
-        
-        - name: Deleting cert manager Network Policy
-          ansible.builtin.shell:
-            cmd: calicoctl delete networkpolicy default.cert-manager -n cert-manager
-
-        #- name: Deleting postgres Network Policy
-        #  ansible.builtin.shell:
-        #    cmd: calicoctl delete networkpolicy default.postgres -n backend
-            
-    - name: deleting argocd deny all
+    - name: Delete all Cilium Network Policies by namespace
       ansible.builtin.shell:
-        cmd: calicoctl delete globalnetworkpolicy default.default-deny-all
+        cmd: kubectl delete ciliumnetworkpolicy --all -n {{ item }}
+      with_items:
+        - argocd
+        - nginx
+        - prometheus
+        - frontend
+        - cloudflare-tunnel
+        - external-dns
+        - cert-manager
+        - backend
+      ignore_errors: true
