--- a/infrastructure/kubernetes/playbooks/test2.yaml
+++ b/infrastructure/kubernetes/playbooks/test2.yaml
@@ -15,12 +15,12 @@
       - network_policies
       - cert_manager
       - prometheus
-      - nginx
-      - cloudflare_tunnel
-      - external_dns
-      - frontend
-      - argo_cd
-      #- calico
+      #- nginx
+      #- cloudflare_tunnel
+      #- external_dns
+      #- frontend
+      #- argo_cd
+      #- cilium
     loop_control:
       loop_var: reset
       
