--- a/infrastructure/kubernetes/roles/cilium/tasks/facts.yaml
+++ b/infrastructure/kubernetes/roles/cilium/tasks/facts.yaml
@@ -25,7 +25,7 @@
       metrics:
         service:
           monitor:
-            enabled: true
+            enabled: false
             scrape:
               interval: 15s
   run_once: true
