fix(infrastructure): fixed network policy to allow required ports

--- a/infrastructure/kubernetes/roles/network_policies/templates/backend-namespace.yaml
+++ b/infrastructure/kubernetes/roles/network_policies/templates/backend-namespace.yaml
@@ -47,6 +47,11 @@ spec:
             - port: "5432"
               protocol: TCP
   egress:
+    # Kubernetes API access
+    - toEntities:
+      - kube-apiserver
+    - toEntities:
+      - host
     # CloudNativePG Operator
     - toEndpoints:
         - matchLabels:
