--- a/infrastructure/kubernetes/roles/network_policies/templates/external-dns-namespace.yaml
+++ b/infrastructure/kubernetes/roles/network_policies/templates/external-dns-namespace.yaml
@@ -10,6 +10,11 @@ spec:
     matchLabels:
       app.kubernetes.io/instance: external-dns
   egress:
+    # Kubernetes API access
+    - toEntities:
+      - kube-apiserver
+    - toEntities:
+      - host
     # DNS lookups (UDP)
     - toEndpoints:
         - matchLabels:
