--- a/infrastructure/kubernetes/roles/network_policies/templates/prometheus-namespace.yaml
+++ b/infrastructure/kubernetes/roles/network_policies/templates/prometheus-namespace.yaml
@@ -8,6 +8,11 @@ metadata:
 spec:
   endpointSelector: {}
   egress:
+    # Kubernetes API access
+    - toEntities:
+      - kube-apiserver
+    - toEntities:
+      - host
     # DNS lookups (UDP)
     - toEndpoints:
         - matchLabels:
