--- a/infrastructure/kubernetes/roles/network_policies/templates/nginx-namespace.yaml
+++ b/infrastructure/kubernetes/roles/network_policies/templates/nginx-namespace.yaml
@@ -27,6 +27,11 @@ spec:
             - port: "443"
               protocol: TCP
   egress:
+    # Kubernetes API access
+    - toEntities:
+      - kube-apiserver
+    - toEntities:
+      - host
     # DNS lookups (UDP)
     - toEndpoints:
         - matchLabels:
