feat(infrastructure): Created Yaml files for deploying Kafka onto the k3s cluster via the Strimzi Operator

--- a/infrastructure/kubernetes/playbooks/reset.yaml
+++ b/infrastructure/kubernetes/playbooks/reset.yaml
@@ -15,6 +15,7 @@
         #- prometheus
         #- cert_manager
         #- nginx
+        #- kafka
         #- cloudflare_tunnel
         #- external_dns
         #- frontend
