--- a/infrastructure/kubernetes/roles/kafka/overlay/base/auth.yaml
+++ b/infrastructure/kubernetes/roles/kafka/overlay/base/auth.yaml
@@ -19,7 +19,7 @@ spec:
       # Allows producing messages to raw-topic
       - resource:
           type: topic
-          name: '{{ kafka_vars.kubernetes.auth.data_ingestion.dest_topic }}'
+          name: raw-topic
           patternType: literal
         operations:
           - Describe
@@ -30,7 +30,7 @@ spec:
       # Allows producing messages to raw-topic dlq
       - resource:
           type: topic
-          name: '{{ kafka_map.auth.data-ingestion-dlq.topic }}'
+          name: raw-topic-dlq
           patternType: literal
         operations:
           - Describe
@@ -56,7 +56,7 @@ spec:
       # Allows producing messages to aggregated
       - resource:
           type: topic
-          name: '{{ kafka_vars.kubernetes.auth.category_classification.dest_topic }}'
+          name: aggregated
           patternType: literal
         operations:
           - Describe
@@ -66,7 +66,7 @@ spec:
       # Allows producing messages to aggregated dlq
       - resource:
           type: topic
-          name: '{{ kafka_map.auth.category-classification-dlq.topic }}'
+          name: aggregated-dlq
           patternType: literal
         operations:
           - Describe
@@ -76,7 +76,7 @@ spec:
       # Allows consuming from sentence-embeddings topic
       - resource:
           type: topic
-          name: '{{ kafka_vars.kubernetes.auth.category_classification.source_topic }}'
+          name: sentence-embeddings
           patternType: literal
         operations:
           - Describe
@@ -86,7 +86,7 @@ spec:
       # consumer group defined in service code
       - resource:
           type: group
-          name: '{{ kafka_vars.kubernetes.auth.category_classification.consumer_group }}'
+          name: category-classifier-service
           patternType: literal
         operations:
           - Read
@@ -109,7 +109,7 @@ spec:
       # Allows producing messages to sentence-embeddings
       - resource:
           type: topic
-          name: '{{ kafka_vars.kubernetes.auth.post_embeddings.dest_topic }}'
+          name: sentence-embeddings
           patternType: literal
         operations:
           - Describe
@@ -119,7 +119,7 @@ spec:
       # Allows producing messages to sentence-embeddings dlq
       - resource:
           type: topic
-          name: '{{ kafka_map.auth.post-embeddings-dlq.topic }}'
+          name: sentence-embeddings-dlq
           patternType: literal
         operations:
           - Describe
@@ -129,7 +129,7 @@ spec:
       # Allows consuming from raw data topic
       - resource:
           type: topic
-          name: '{{ kafka_vars.kubernetes.auth.post_embeddings.source_topic }}'
+          name: raw-data
           patternType: literal
         operations:
           - Describe
@@ -139,7 +139,7 @@ spec:
       # consumer group defined in service code
       - resource:
           type: group
-          name: '{{ kafka_vars.kubernetes.auth.post_embeddings.consumer_group }}'
+          name: sentence-embeddings-service
           patternType: literal
         operations:
           - Read
@@ -162,7 +162,7 @@ spec:
       # Allows producing messages to aggregated
       - resource:
           type: topic
-          name: '{{ kafka_vars.kubernetes.auth.sentiment_analysis.dest_topic }}'
+          name: aggregated
           patternType: literal
         operations:
           - Describe
@@ -172,7 +172,7 @@ spec:
       # Allows producing messages to aggregated dlq
       - resource:
           type: topic
-          name: '{{ kafka_map.auth.sentiment-analysis-dlq.topic }}'
+          name: aggregated-dlq
           patternType: literal
         operations:
           - Describe
@@ -182,7 +182,7 @@ spec:
       # Allows consuming from topic-classified topic
       - resource:
           type: topic
-          name: '{{ kafka_vars.kubernetes.auth.sentiment_analysis.source_topic }}'
+          name: topic-classified
           patternType: literal
         operations:
           - Describe
@@ -192,7 +192,7 @@ spec:
       # consumer group defined in service code
       - resource:
           type: group
-          name: '{{ kafka_vars.kubernetes.auth.sentiment_analysis.consumer_group }}'
+          name: sentiment-analysis-service
           patternType: literal
         operations:
           - Read
@@ -215,7 +215,7 @@ spec:
       # Allows producing messages to topic-classified
       - resource:
           type: topic
-          name: '{{ kafka_vars.kubernetes.auth.topic_classification.dest_topic }}'
+          name: topic-classified
           patternType: literal
         operations:
           - Describe
@@ -225,17 +225,17 @@ spec:
       # Allows producing messages to topic-classified dlq
       - resource:
           type: topic
-          name: '{{ kafka_map.auth.topic-classification-dlq.topic }}'
+          name: topic-classified-dlq
           patternType: literal
         operations:
           - Describe
           - Create
           - Write
         host: "*"
-      # Allows consuming from topic-classified topic
+      # Allows consuming from sentence-embeddings topic
       - resource:
           type: topic
-          name: '{{ kafka_vars.kubernetes.auth.topic_classification.source_topic }}'
+          name: sentence-embeddings
           patternType: literal
         operations:
           - Describe
@@ -245,7 +245,7 @@ spec:
       # consumer group defined in service code
       - resource:
           type: group
-          name: '{{ kafka_vars.kubernetes.auth.topic_classification.consumer }}'
+          name: keyword-extraction-service
           patternType: literal
         operations:
           - Read
