--- a/infrastructure/kubernetes/roles/kafka/overlay/base/clusters.yaml
+++ b/infrastructure/kubernetes/roles/kafka/overlay/base/clusters.yaml
@@ -1,7 +1,7 @@
 apiVersion: kafka.strimzi.io/v1beta2
 kind: Kafka
 metadata:
-  name: my-cluster
+  name: cyphria-cluster
   namespace: kafka
 spec:
   kafka:
