--- a/infrastructure/kubernetes/roles/kafka/overlay/base/clusters.yaml
+++ b/infrastructure/kubernetes/roles/kafka/overlay/base/clusters.yaml
@@ -23,9 +23,10 @@ spec:
       transaction.state.log.min.isr: 2
       default.replication.factor: 2
       min.insync.replicas: 1
-      kafkaExporter: 
-        topicRegex: ".*" # targets all topics
-        groupRegex: ".*" # targets all groups
+
+  kafkaExporter:
+    topicRegex: ".*"
+    groupRegex: ".*"
 
   entityOperator:
     topicOperator: {}
