--- a/infrastructure/kubernetes/roles/kafka/overlay/base/clusters.yaml
+++ b/infrastructure/kubernetes/roles/kafka/overlay/base/clusters.yaml
@@ -25,8 +25,9 @@ spec:
       min.insync.replicas: 1
 
   kafkaExporter:
-    topicRegex: ".*"
     groupRegex: ".*"
+    topicRegex: ".*"
+    template: {}
 
   entityOperator:
     topicOperator: {}
