--- a/infrastructure/kubernetes/roles/kafka/overlay/base/clusters.yaml
+++ b/infrastructure/kubernetes/roles/kafka/overlay/base/clusters.yaml
@@ -16,6 +16,8 @@ spec:
         port: 9093
         type: internal
         tls: true
+    authorization:
+      type: simple
     config:
       auto.create.topics.enable: false
       offsets.topic.replication.factor: 2
