fix(infra): forgot to add a service for kafka exporter

--- a/infrastructure/kubernetes/roles/kafka/overlay/base/clusters.yaml
+++ b/infrastructure/kubernetes/roles/kafka/overlay/base/clusters.yaml
@@ -29,7 +29,11 @@ spec:
   kafkaExporter:
     groupRegex: ".*"
     topicRegex: ".*"
-    template: {}
+    template: 
+      service:
+        metadata:
+          labels:
+            app: kafka-exporter
 
   entityOperator:
     topicOperator: {}
