--- a/infrastructure/kubernetes/roles/prometheus/templates/deploy_operator.yaml
+++ b/infrastructure/kubernetes/roles/prometheus/templates/deploy_operator.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata: 
-  name: prometheus
+  name: prometheus-operator
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
@@ -10,6 +10,7 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: prometheus
+    
   sources: 
     - chart: prometheus-operator-crds
       repoURL: https://prometheus-community.github.io/helm-charts
@@ -34,10 +35,6 @@ spec:
           service:  
             type: NodePort
         skipCrds: true
-    
-    - repoURL: https://github.com/Vchen7629/Cyphria.git
-      targetRevision: main
-      path: infrastructure/kubernetes/roles/prometheus/templates
     
   syncPolicy:
     automated:
