--- a/infrastructure/kubernetes/roles/kafka/templates/deploy_crds.yaml
+++ b/infrastructure/kubernetes/roles/kafka/templates/deploy_crds.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: kafka-crds
-  namespace: kafka
+  namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
