chore(infra): created network policies for kafka services

--- a/infrastructure/kubernetes/roles/network_policies/tasks/reset.yaml
+++ b/infrastructure/kubernetes/roles/network_policies/tasks/reset.yaml
@@ -8,6 +8,7 @@
         - nginx
         - prometheus
         - frontend
+        - kafka
         - cloudflare-tunnel
         - external-dns
         - cert-manager
