chore(infra): added custom grafana dashboards for kafka-cluster and topic

--- a/infrastructure/kubernetes/roles/victoria_metrics/overlay/kustomization.yaml
+++ b/infrastructure/kubernetes/roles/victoria_metrics/overlay/kustomization.yaml
@@ -5,3 +5,5 @@ resources:
   - targets/argocd.yaml
   - targets/calico.yaml
   - targets/kafka.yaml
+  - dashboards/kafka-cluster.yaml
+  - dashboards/kafka-topic.yaml
