--- a/infrastructure/kubernetes/roles/victoria_metrics/overlay/dashboards/kafka-topic.yaml
+++ b/infrastructure/kubernetes/roles/victoria_metrics/overlay/dashboards/kafka-topic.yaml
@@ -6,13 +6,13 @@ metadata:
   labels:
     grafana_dashboard: "1"
 data:
-  my-dashboard.json: |-
+  kafka_topic.json: |-
       {
         "__inputs": [
           {
-            "name": "DS_CORTEX",
-            "label": "Prometheus",
-            "description": "Prometheus Server",
+            "name": "Kafka topic",
+            "label": "VictoriaMetrics",
+            "description": "Dashboard for showing kafka topic metrics",
             "type": "datasource",
             "pluginId": "prometheus",
             "pluginName": "Prometheus"
@@ -75,7 +75,7 @@ data:
             "bars": false,
             "dashLength": 10,
             "dashes": false,
-            "datasource": "${DS_CORTEX}",
+            "datasource": "VictoriaMetrics",
             "description": "Summed delta between High and Low watermark of all partitions in the given topic. Therefore not accurate for compacted topics that contain compacted records.",
             "fieldConfig": {
               "defaults": {
@@ -177,7 +177,7 @@ data:
               "rgba(237, 129, 40, 0.89)",
               "#d44a3a"
             ],
-            "datasource": "${DS_CORTEX}",
+            "datasource": "VictoriaMetrics",
             "fieldConfig": {
               "defaults": {
                 "custom": {}
@@ -271,7 +271,7 @@ data:
               "rgba(237, 129, 40, 0.89)",
               "#d44a3a"
             ],
-            "datasource": "${DS_CORTEX}",
+            "datasource": "VictoriaMetrics",
             "fieldConfig": {
               "defaults": {
                 "custom": {}
@@ -361,7 +361,7 @@ data:
             "bars": false,
             "dashLength": 10,
             "dashes": false,
-            "datasource": "${DS_CORTEX}",
+            "datasource": "VictoriaMetrics",
             "description": "Summed delta between High and Low watermark of all partitions in the given topic. Therefore not accurate for compacted topics that contain compacted records.",
             "fieldConfig": {
               "defaults": {
@@ -464,7 +464,7 @@ data:
               "rgba(237, 129, 40, 0.89)",
               "#d44a3a"
             ],
-            "datasource": "${DS_CORTEX}",
+            "datasource": "VictoriaMetrics",
             "fieldConfig": {
               "defaults": {
                 "custom": {}
@@ -550,7 +550,7 @@ data:
             "valueName": "current"
           },
           {
-            "datasource": "${DS_CORTEX}",
+            "datasource": "VictoriaMetrics",
             "fieldConfig": {
               "defaults": {
                 "custom": {
@@ -649,7 +649,7 @@ data:
             "bars": false,
             "dashLength": 10,
             "dashes": false,
-            "datasource": "${DS_CORTEX}",
+            "datasource": "VictoriaMetrics",
             "description": "Log dir size across all partitions and brokers for the given topic.",
             "fieldConfig": {
               "defaults": {
@@ -744,7 +744,7 @@ data:
             }
           },
           {
-            "datasource": "${DS_CORTEX}",
+            "datasource": "VictoriaMetrics",
             "fieldConfig": {
               "defaults": {
                 "custom": {
@@ -852,7 +852,7 @@ data:
             {
               "allValue": null,
               "current": {},
-              "datasource": "${DS_CORTEX}",
+              "datasource": "VictoriaMetrics",
               "definition": "label_values(kminion_kafka_topic_low_water_mark_sum, topic_name)",
               "error": null,
               "hide": 0,
