chore(infra): added tags and grafana dashboard json for cert manager

--- a/infrastructure/kubernetes/roles/victoria_metrics/overlay/dashboards/kafka-cluster.yaml
+++ b/infrastructure/kubernetes/roles/victoria_metrics/overlay/dashboards/kafka-cluster.yaml
@@ -860,7 +860,11 @@ data:
       ],
       "schemaVersion": 26,
       "style": "dark",
-      "tags": [],
+      "tags": [
+        "kafka",
+        "victoriametrics",
+        "data-pipeline"
+      ],
       "templating": {
         "list": [
           {
