--- a/infrastructure/kubernetes/roles/victoria_metrics/overlay/dashboards/kafka-topic.yaml
+++ b/infrastructure/kubernetes/roles/victoria_metrics/overlay/dashboards/kafka-topic.yaml
@@ -846,7 +846,11 @@ data:
         "refresh": "30s",
         "schemaVersion": 26,
         "style": "dark",
-        "tags": [],
+        "tags": [
+          "kafka",
+          "victoriametrics",
+          "data-pipeline"
+        ],
         "templating": {
           "list": [
             {
