fix(infra): forgot to update kustomization.yaml to include new dashboards

--- a/infrastructure/kubernetes/roles/victoria_metrics/overlay/kustomization.yaml
+++ b/infrastructure/kubernetes/roles/victoria_metrics/overlay/kustomization.yaml
@@ -7,3 +7,5 @@ resources:
   - targets/kafka.yaml
   - dashboards/kafka-cluster.yaml
   - dashboards/kafka-topic.yaml
+  - dashboards/kafka-consumer-group.yaml
+  - dashboards/cert-manager.yaml
