fix(infra): removed trailing comma

--- a/infrastructure/kubernetes/roles/victoria_metrics/overlay/dashboards/cert-manager.yaml
+++ b/infrastructure/kubernetes/roles/victoria_metrics/overlay/dashboards/cert-manager.yaml
@@ -638,7 +638,7 @@ data:
       "schemaVersion": 39,
       "tags": [
         "cert-manager",
-        "victoriametrics",
+        "victoriametrics"
       ],
       "templating": {
         "list": [
