chore(infra): change timescale image to non-ha version since it was causing issues with cnpg

--- a/infrastructure/kubernetes/roles/postgres/overlay/database/timescaledb_extension.yaml
+++ b/infrastructure/kubernetes/roles/postgres/overlay/database/timescaledb_extension.yaml
@@ -5,5 +5,5 @@ metadata:
 spec:
   images:
     - major: 17           # PostgreSQL major version
-      image: timescale/timescaledb-ha:pg17.6-ts2.22.1-all
+      image: timescale/timescaledb:2.22.1-pg17
       
