chore(infra): added grafana dashboard for postgres

--- a/infrastructure/kubernetes/roles/victoria_metrics/overlay/kustomization.yaml
+++ b/infrastructure/kubernetes/roles/victoria_metrics/overlay/kustomization.yaml
@@ -9,3 +9,4 @@ resources:
   - dashboards/kafka-topic.yaml
   - dashboards/kafka-consumer-group.yaml
   - dashboards/cert-manager.yaml
+  - dashboards/postgres.yaml
