--- a/infrastructure/kubernetes/roles/victoria_metrics/overlay/dashboards/postgres.yaml
+++ b/infrastructure/kubernetes/roles/victoria_metrics/overlay/dashboards/postgres.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: victoria-metrics
   labels:
     grafana_dashboard: "1"
+  annotations:
+    argocd.argoproj.io/sync-options: ServerSideApply=true
 data:
   postgres_manager.json: |-
     {
